--- a/site/index.html
+++ b/site/index.html
@@ -2,11 +2,33 @@
 <html>
 <head>
 	<title>SALAM</title>
+	<style type="text/css">
+		browserSync: {
+    bsFiles: {
+        src : 'assets/css/*.css'
+    },
+    options: {
+        server: {
+            baseDir: "./"
+        }
+    }
+}
+	</style>
 </head>
 <body>
-	<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.7'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+<h1>Fidan</h1>
+
+
+
+
+
+
+
+
+
+
+
+	
 
 </body>
 </html>
